# ESP32

./: README.md
lab1/: README.md
lab1/lab1_2/main/: main.c
lab1/lab1_3/main/: main.c
lab2/: README.md
lab2/lab2_2/: CMakeLists.txt  README.md
lab2/lab2_2/main/: lab2_2.c
lab3/: README.md
lab3/lab3_2/main/: CMakeLists.txt  lab3.cpp  lcd.cpp  lcd.h
lab3/lab3_3/: sdkconfig.old
lab3/lab3_3/main/: CMakeLists.txt  lcd.cpp  main.cpp
lab4/: README.md
lab4/lab4_1/: CMakeLists.txt
lab4/lab4_1/main/: CMakeLists.txt  icm42670.c  icm42670.h  main.c
lab4/lab4_2/: sdkconfig
lab4/lab4_2/main/: main.c
lab4/lab4_3/: CMakeLists.txt  sdkconfig.old
lab4/lab4_3/main/: CMakeLists.txt  lab4_3.c
lab5/: README.md
lab5/lab5_1/: send
lab5/lab5_2/: CMakeLists.txt
lab5/lab5_2/main/: lab5_2.c
lab5/lab5_3/main/: lab5_3.c
lab6/: CMakeLists.txt  README.md
lab6/main/: main.c
lab7/: README.md
lab7/lab7_1/: sdkconfig.ci  sdkconfig.defaults  server.py
lab7/lab7_1/main/: http_request_example_main.c
lab7/lab7_2/: server.py
lab7/lab7_2/main/: http_request_example_main.c
lab7/lab7_3/: sdkconfig.old  server.py
lab7/lab7_3/main/: http_request_example_main.c
